--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@svgr/webpack": "6.5.1",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
+    "@types/react-datepicker": "4.8.0",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.7",
     "eslint": "8.19.0",
