--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "autoprefixer": "^10.4.7",
     "eslint": "8.19.0",
     "eslint-config-next": "latest",
+    "file-loader": "6.2.0",
     "graphql": "16.6.0",
     "graphql-tag": "2.12.6",
+    "html-loader": "4.2.0",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
