--- a/.github/workflows/prewiev.yml
+++ b/.github/workflows/prewiev.yml
@@ -17,8 +17,8 @@ jobs:
         with:
           node-version: 16
           cache: yarn
-      - run: yarn install --immutable
-      - run: yarn vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
-      - run: yarn vercel build --token=${{ secrets.VERCEL_TOKEN }}
+      - run: npm install --immutable
+      - run: npx vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+      - run: npx vercel build --token=${{ secrets.VERCEL_TOKEN }}
       - id: deploy
         run: echo "::set-output name=url::$(yarn vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }})"
