--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "0.4.2",
+    "@types/formidable": "2.0.5",
+    "axios": "1.3.3",
     "chart.js": "4.2.0",
     "date-fns": "2.29.3",
+    "formidable": "2.1.1",
     "framer-motion": "8.5.4",
     "next": "latest",
     "next-auth": "4.19.1",
+    "next-superjson-plugin": "0.5.4",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
     "react-datepicker": "4.8.0",
     "react-dom": "18.2.0",
     "react-icons": "4.7.1",
     "react-iframe": "1.8.5",
-    "sharp": "0.31.3"
+    "sharp": "0.31.3",
+    "superjson": "1.12.2"
   },
   "devDependencies": {
     "@prisma/client": "4.9.0",
