next.js 13.2.1'e yükseltildi

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "date-fns": "2.29.3",
     "formidable": "2.1.1",
     "framer-motion": "8.5.4",
-    "next": "latest",
+    "next": "13.2.1",
     "next-auth": "4.19.1",
     "next-superjson-plugin": "0.5.4",
     "react": "18.2.0",
@@ -42,7 +42,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.7",
     "eslint": "8.19.0",
-    "eslint-config-next": "latest",
+    "eslint-config-next": "13.2.1",
     "file-loader": "6.2.0",
     "graphql": "16.6.0",
     "graphql-tag": "2.12.6",
