fix and refactor:bug fix and refactor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
       "@/constants/*": ["constants/*"],
       "@/types/*": ["types/*"],
       "@/utils/*": ["utils/*"],
+      "@/hooks/*": ["hooks/*"],
       
     },
     "target": "es5",
